<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="track"
            type="com.easify.easify.model.Track" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/discover_fragment_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSpotifyBlack">

        <TextView
            android:id="@+id/discover_label"
            style="@style/Toolbar.Title.Dynamic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_root_padding"
            android:layout_marginStart="@dimen/fragment_root_padding"
            android:layout_marginEnd="@dimen/fragment_root_padding"
            app:dynamicText="@{track}"
            app:slideText="@{true}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Brooklyn Baby" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/discover_label"
            app:layout_constraintBottom_toTopOf="@+id/discover">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_layout"
                android:layout_width="match_parent"
                android:padding="@dimen/fragment_root_padding"
                android:layout_height="wrap_content">

                <com.easify.easify.ui.customviews.FeatureView
                    android:id="@+id/danceability"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/feature_fragment_feature_margin_top"
                    app:editable="true"
                    app:label="@string/fragment_features_danceability"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.easify.easify.ui.customviews.FeatureView
                    android:id="@+id/energy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/feature_fragment_feature_margin_top"
                    app:editable="true"
                    app:label="@string/fragment_features_energy"
                    app:layout_constraintTop_toBottomOf="@id/danceability" />

                <com.easify.easify.ui.customviews.FeatureView
                    android:id="@+id/speechiness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/feature_fragment_feature_margin_top"
                    app:editable="true"
                    app:label="@string/fragment_features_speechiness"
                    app:layout_constraintTop_toBottomOf="@id/energy" />

                <com.easify.easify.ui.customviews.FeatureView
                    android:id="@+id/acousticness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/feature_fragment_feature_margin_top"
                    app:editable="true"
                    app:label="@string/fragment_features_acousticness"
                    app:layout_constraintTop_toBottomOf="@id/speechiness" />

                <com.easify.easify.ui.customviews.FeatureView
                    android:id="@+id/instrumentalness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/feature_fragment_feature_margin_top"
                    app:editable="true"
                    app:label="@string/fragment_features_instrumentalness"
                    app:layout_constraintTop_toBottomOf="@id/acousticness" />

                <com.easify.easify.ui.customviews.FeatureView
                    android:id="@+id/liveness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/feature_fragment_feature_margin_top"
                    app:editable="true"
                    app:label="@string/fragment_features_liveness"
                    app:layout_constraintTop_toBottomOf="@id/instrumentalness" />

                <com.easify.easify.ui.customviews.FeatureView
                    android:id="@+id/valence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/feature_fragment_feature_margin_top"
                    app:editable="true"
                    app:label="@string/fragment_features_valence"
                    app:layout_constraintTop_toBottomOf="@id/liveness" />

                <com.easify.easify.ui.customviews.FeatureView
                    android:id="@+id/tempo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/feature_fragment_feature_margin_top"
                    app:editable="true"
                    app:label="@string/fragment_features_tempo"
                    app:layout_constraintTop_toBottomOf="@id/valence" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/fragment_discover_button"
            android:textColor="@color/colorSpotifyWhite"
            android:textSize="16sp"
            android:background="@drawable/button_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>